fix: support dark mode for dropdown menu

--- a/assets/css/dark-mode.scss
+++ b/assets/css/dark-mode.scss
@@ -34,11 +34,28 @@
     }
 
     #chart-select {
+        #dropdown-menu {
+            background: #222;
+            border: 1px solid #444;
+        }
+
+        .dropdown-item {
+            color: #ccc;
+
+            &-selected {
+                color: #fff;
+            }
+
+            &:hover {
+                background: #333;
+            }
+        }
+
         .button {
             background: #292929;
             color: #fff;
             &-selected {
-                background: #42107b;
+                background: $primary;
                 color: #fff;
             }
         }
